--- a/Baladas/src/main/res/values/strings.xml
+++ b/Baladas/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Baladas</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="pesquisar">Pesquisar</string>
+    <string name="locAtual">Baladas Perto de Você</string>
+    <string name="baladasFavoritas">Baladas Favoritas</string>
 
 </resources>
